@@ -150,5 +150,7 @@ Revision history for CatalystX-CRUD
         * change all reserved param names in Model::Utils to use 'cxc-' prefix instead of '_'. Backwards compat
           is preserved where possible.
         * Model::Utils make_query() will uc() sort direction 
+        * change behaviour of get_primary_key() in base Controller to not look in req->params for pk values.
+          This allows for changing the PK as part of an update.
 
 
